--- a/extras/nemotron-253b-tutorial.html
+++ b/extras/nemotron-253b-tutorial.html
@@ -7,7 +7,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
-    body { background: linear-gradient(135deg, #0f172a 0%, #1e1b4b 100%); min-height: 100vh; font-family: system-ui, -apple-system, sans-serif; }
+    body { background: #000; min-height: 100vh; font-family: system-ui, -apple-system, sans-serif; }
     ::-webkit-scrollbar { width: 8px; }
     ::-webkit-scrollbar-track { background: #1e293b; }
     ::-webkit-scrollbar-thumb { background: #475569; border-radius: 4px; }
