--- a/movement2_pre_training/AI-Training-Pipeline.html
+++ b/movement2_pre_training/AI-Training-Pipeline.html
@@ -12,7 +12,7 @@
     * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
       font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-      background: linear-gradient(135deg, #0a0a0f 0%, #1a1a2e 50%, #0f0f1a 100%);
+      background: #000;
       min-height: 100vh;
       color: #e0e0e0;
       -webkit-font-smoothing: antialiased;
