--- a/movement4_inference/inference-lifecycle-diagram.html
+++ b/movement4_inference/inference-lifecycle-diagram.html
@@ -10,7 +10,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
-    body { background: #0f172a; min-height: 100vh; }
+    body { background: #000; min-height: 100vh; }
     ::-webkit-scrollbar { width: 8px; height: 8px; }
     ::-webkit-scrollbar-track { background: #1e293b; }
     ::-webkit-scrollbar-thumb { background: #475569; border-radius: 4px; }
