--- a/index.html
+++ b/index.html
@@ -435,12 +435,12 @@
         },
         {
           id: 'patterns-react',
-          title: 'ReAct & Reflexion',
-          subtitle: 'Reasoning patterns',
-          file: 'movement6_agents/AGENTIC_PATTERNS_react_reflexion.html',
+          title: 'Patterns Quick Ref',
+          subtitle: 'ReAct, Reflexion, CoT',
+          file: 'movement6_agents/PATTERNS_quick_reference.html',
           color: 'indigo',
           icon: '🔄',
-          topics: ['ReAct loop', 'Reflexion', 'Self-critique', 'LATS']
+          topics: ['ReAct', 'Reflexion', 'CoT', 'Plan-Execute']
         },
         {
           id: 'patterns-tool',
