--- a/movement6_agents/PATTERNS_quick_reference.html
+++ b/movement6_agents/PATTERNS_quick_reference.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Agentic Patterns - ReAct, Reflexion, Plan-Execute</title>
+  <title>Agentic Patterns - Quick Reference</title>
   <script src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
   <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
@@ -114,6 +114,25 @@
                 <span className="text-green-300">Reflect</span>
                 <span className="text-slate-500 mx-2">-></span>
                 <span className="text-violet-300">Think...</span>
+              </div>
+            </div>
+
+            {/* Deep Dives */}
+            <div className="mb-8">
+              <h2 className="text-lg font-bold mb-3 text-cyan-300">📚 Detailed References</h2>
+              <div className="grid grid-cols-3 gap-3">
+                <a href="AGENTIC_PATTERNS_core_react_swarm.html" className="p-4 rounded-xl border-2 bg-violet-900/30 border-violet-500 hover:scale-105 transition-transform block no-underline">
+                  <div className="font-bold text-white">ReAct & Swarm Patterns</div>
+                  <div className="text-sm text-violet-300">Detailed diagrams →</div>
+                </a>
+                <a href="AGENTIC_PATTERNS_tool_augmented.html" className="p-4 rounded-xl border-2 bg-green-900/30 border-green-500 hover:scale-105 transition-transform block no-underline">
+                  <div className="font-bold text-white">Tool Calling Patterns</div>
+                  <div className="text-sm text-green-300">Single/Multi-step →</div>
+                </a>
+                <a href="AGENTIC_PATTERNS_advanced_memory.html" className="p-4 rounded-xl border-2 bg-amber-900/30 border-amber-500 hover:scale-105 transition-transform block no-underline">
+                  <div className="font-bold text-white">Advanced Patterns</div>
+                  <div className="text-sm text-amber-300">Memory, Routing, Ops →</div>
+                </a>
               </div>
             </div>
 
