--- a/index.html
+++ b/index.html
@@ -627,6 +627,33 @@
           icon: '⚠️',
           topics: ['Mistakes', 'Pitfalls', 'Best practices']
         },
+        {
+          id: 'troubleshooting',
+          title: 'Production Troubleshooting',
+          subtitle: 'Common issues & fixes',
+          file: 'extras/PRODUCTION_troubleshooting_guide.html',
+          color: 'orange',
+          icon: '🔧',
+          topics: ['Debugging', 'Latency', 'Errors', 'Incident Response']
+        },
+        {
+          id: 'security',
+          title: 'Security & Hardening',
+          subtitle: 'Prompt injection defense',
+          file: 'extras/SECURITY_prompt_injection_defense.html',
+          color: 'purple',
+          icon: '🔒',
+          topics: ['Injection', 'Jailbreak', 'Defense in Depth']
+        },
+        {
+          id: 'mlops',
+          title: 'LLMOps Lifecycle',
+          subtitle: 'Versioning & experiment tracking',
+          file: 'extras/MLOPS_lifecycle_versioning.html',
+          color: 'emerald',
+          icon: '🔄',
+          topics: ['CI/CD', 'Versioning', 'A/B Testing', 'Observability']
+        },
       ];
 
       const colorClasses = {
