--- a/movement1_foundation/TOKENIZATION_bpe_wordpiece_sentencepiece.html
+++ b/movement1_foundation/TOKENIZATION_bpe_wordpiece_sentencepiece.html
@@ -860,6 +860,34 @@
 
             {/* COMPARISON */}
             <section className="mb-10">
+              <Hoverable id="compare-methods">
+                <div className="bg-slate-900/60 border border-indigo-500/30 rounded-xl p-6 mb-4">
+                  <div className="text-lg font-black text-indigo-300 mb-4 text-center">📊 METHOD COMPARISON</div>
+                  <div className="grid grid-cols-4 gap-3 text-sm">
+                    <div className="bg-blue-900/30 rounded p-3 text-center">
+                      <div className="text-blue-300 font-bold">BPE</div>
+                      <div className="text-blue-100/60 text-xs mt-1">Frequency-based merges</div>
+                      <div className="text-blue-400 text-xs mt-1">GPT, LLaMA</div>
+                    </div>
+                    <div className="bg-purple-900/30 rounded p-3 text-center">
+                      <div className="text-purple-300 font-bold">WordPiece</div>
+                      <div className="text-purple-100/60 text-xs mt-1">Likelihood-based</div>
+                      <div className="text-purple-400 text-xs mt-1">BERT, Google</div>
+                    </div>
+                    <div className="bg-green-900/30 rounded p-3 text-center">
+                      <div className="text-green-300 font-bold">SentencePiece</div>
+                      <div className="text-green-100/60 text-xs mt-1">Language-agnostic</div>
+                      <div className="text-green-400 text-xs mt-1">T5, Multilingual</div>
+                    </div>
+                    <div className="bg-orange-900/30 rounded p-3 text-center">
+                      <div className="text-orange-300 font-bold">Unigram</div>
+                      <div className="text-orange-100/60 text-xs mt-1">Top-down pruning</div>
+                      <div className="text-orange-400 text-xs mt-1">Often better quality</div>
+                    </div>
+                  </div>
+                </div>
+              </Hoverable>
+              
               <Hoverable id="compare-models">
                 <div className="bg-slate-900/60 border border-amber-500/30 rounded-xl p-6">
                   <div className="text-lg font-black text-amber-300 mb-4 text-center">🤖 MODEL TOKENIZERS</div>
