--- a/movement2_pre_training/STAGE_1_training_model_init.html
+++ b/movement2_pre_training/STAGE_1_training_model_init.html
@@ -698,6 +698,18 @@
                           <div className="text-emerald-100/60 text-xs">Classic • BERT, GPT-2</div>
                         </div>
                       </Hoverable>
+                      <Hoverable id="act-silu">
+                        <div className="bg-green-900/50 border border-green-400 rounded-lg p-3">
+                          <div className="text-green-200 font-bold text-sm">SiLU (Swish)</div>
+                          <div className="text-green-100/60 text-xs">x × sigmoid(x) • Self-gated</div>
+                        </div>
+                      </Hoverable>
+                      <Hoverable id="norm-layernorm">
+                        <div className="bg-indigo-900/50 border border-indigo-400 rounded-lg p-3">
+                          <div className="text-indigo-200 font-bold text-sm">LayerNorm</div>
+                          <div className="text-indigo-100/60 text-xs">Original • GPT-2, BERT</div>
+                        </div>
+                      </Hoverable>
                     </div>
                   </div>
                 </div>
