--- a/movement2_pre_training/STAGE_5_training_gradient_sync.html
+++ b/movement2_pre_training/STAGE_5_training_gradient_sync.html
@@ -27,6 +27,12 @@
       const [mousePos, setMousePos] = useState({ x: 0, y: 0 });
 
       const handleMouseMove = (e) => {
+        const target = e.target.closest('[data-tooltip-id]');
+        if (target) {
+          setTooltip(target.getAttribute('data-tooltip-id'));
+        } else {
+          setTooltip(null);
+        }
         setMousePos({ x: e.clientX, y: e.clientY });
       };
 
@@ -286,8 +292,8 @@
 
       const Hoverable = ({ id, children }) => (
         <div 
-          onMouseEnter={() => showTooltip(id)}
-          onMouseLeave={hideTooltip}
+          data-tooltip-id={id}
+          
           className="cursor-pointer transition-all hover:scale-[1.02] hover:brightness-110"
         >
           {children}
