--- a/movement1_foundation/MODEL_ZOO_architecture_comparison.html
+++ b/movement1_foundation/MODEL_ZOO_architecture_comparison.html
@@ -27,6 +27,12 @@
       const [mousePos, setMousePos] = useState({ x: 0, y: 0 });
 
       const handleMouseMove = (e) => {
+        const target = e.target.closest('[data-tooltip-id]');
+        if (target) {
+          setTooltip(target.getAttribute('data-tooltip-id'));
+        } else {
+          setTooltip(null);
+        }
         setMousePos({ x: e.clientX, y: e.clientY });
       };
 
@@ -348,8 +354,7 @@
 
       const Hoverable = ({ id, children, className = '' }) => (
         <div 
-          onMouseEnter={() => showTooltip(id)}
-          onMouseLeave={hideTooltip}
+          data-tooltip-id={id}
           className={`cursor-pointer transition-all hover:scale-[1.02] hover:brightness-110 ${className}`}
         >
           {children}
