--- a/movement3_alignment/SAFETY_guardrails_redteaming.html
+++ b/movement3_alignment/SAFETY_guardrails_redteaming.html
@@ -27,6 +27,12 @@
       const [mousePos, setMousePos] = useState({ x: 0, y: 0 });
 
       const handleMouseMove = (e) => {
+        const target = e.target.closest('[data-tooltip-id]');
+        if (target) {
+          setTooltip(target.getAttribute('data-tooltip-id'));
+        } else {
+          setTooltip(null);
+        }
         setMousePos({ x: e.clientX, y: e.clientY });
       };
 
@@ -324,8 +330,8 @@
 
       const Hoverable = ({ id, children, className = '' }) => (
         <div 
-          onMouseEnter={() => showTooltip(id)}
-          onMouseLeave={hideTooltip}
+          data-tooltip-id={id}
+          
           className={`cursor-pointer transition-all hover:scale-[1.02] hover:brightness-110 ${className}`}
         >
           {children}
@@ -440,6 +446,31 @@
                       Training + Input + Output + Monitor<br/>
                       Redundancy is key
                     </div>
+                  </div>
+                </Hoverable>
+              </div>
+              
+              {/* Alignment Methods */}
+              <div className="grid grid-cols-3 gap-4 mt-4">
+                <Hoverable id="align-rlhf">
+                  <div className="p-4 rounded-xl bg-blue-900/40 border-2 border-blue-500">
+                    <div className="text-lg font-black text-blue-200 mb-2">🎯 RLHF for Safety</div>
+                    <div className="text-blue-100/70 text-sm">Train to refuse harmful requests</div>
+                    <div className="text-blue-100/50 text-xs mt-1">Learns when to refuse</div>
+                  </div>
+                </Hoverable>
+                <Hoverable id="align-cai">
+                  <div className="p-4 rounded-xl bg-emerald-900/40 border-2 border-emerald-500">
+                    <div className="text-lg font-black text-emerald-200 mb-2">📜 Constitutional AI</div>
+                    <div className="text-emerald-100/70 text-sm">Self-critique against principles</div>
+                    <div className="text-emerald-100/50 text-xs mt-1">Explicit, auditable rules</div>
+                  </div>
+                </Hoverable>
+                <Hoverable id="align-tax">
+                  <div className="p-4 rounded-xl bg-amber-900/40 border-2 border-amber-500">
+                    <div className="text-lg font-black text-amber-200 mb-2">⚖️ Alignment Tax</div>
+                    <div className="text-amber-100/70 text-sm">Safety can reduce capabilities</div>
+                    <div className="text-amber-100/50 text-xs mt-1">Balance helpful & harmless</div>
                   </div>
                 </Hoverable>
               </div>
