--- a/movement4_inference/QUANTIZATION_gptq_awq_gguf.html
+++ b/movement4_inference/QUANTIZATION_gptq_awq_gguf.html
@@ -27,6 +27,12 @@
       const [mousePos, setMousePos] = useState({ x: 0, y: 0 });
 
       const handleMouseMove = (e) => {
+        const target = e.target.closest('[data-tooltip-id]');
+        if (target) {
+          setTooltip(target.getAttribute('data-tooltip-id'));
+        } else {
+          setTooltip(null);
+        }
         setMousePos({ x: e.clientX, y: e.clientY });
       };
 
@@ -366,8 +372,8 @@
 
       const Hoverable = ({ id, children }) => (
         <div 
-          onMouseEnter={() => showTooltip(id)}
-          onMouseLeave={hideTooltip}
+          data-tooltip-id={id}
+          
           className="cursor-pointer transition-all hover:scale-[1.02] hover:brightness-110"
         >
           {children}
@@ -499,26 +505,28 @@
               </div>
 
               {/* Size Comparison */}
-              <div className="bg-slate-800/50 rounded-xl p-4">
-                <div className="text-center text-sm text-slate-400 mb-3">LLaMA-70B Memory Footprint</div>
-                <div className="flex items-end justify-center gap-4 h-24">
-                  {[
-                    { fmt: 'FP32', size: 280, pct: 100 },
-                    { fmt: 'FP16', size: 140, pct: 50 },
-                    { fmt: 'INT8', size: 70, pct: 25 },
-                    { fmt: 'INT4', size: 35, pct: 12.5 },
-                  ].map((d, i) => (
-                    <div key={i} className="text-center">
-                      <div 
-                        className={`w-16 mx-auto rounded-t-lg ${i === 3 ? 'bg-teal-500' : 'bg-slate-600'}`}
-                        style={{ height: `${d.pct}%` }}
-                      />
-                      <div className="text-white/80 text-xs font-bold mt-1">{d.fmt}</div>
-                      <div className="text-slate-500 text-xs">{d.size}GB</div>
-                    </div>
-                  ))}
+              <Hoverable id="compare-bits">
+                <div className="bg-slate-800/50 rounded-xl p-4">
+                  <div className="text-center text-sm text-slate-400 mb-3">LLaMA-70B Memory Footprint</div>
+                  <div className="flex items-end justify-center gap-4 h-24">
+                    {[
+                      { fmt: 'FP32', size: 280, pct: 100 },
+                      { fmt: 'FP16', size: 140, pct: 50 },
+                      { fmt: 'INT8', size: 70, pct: 25 },
+                      { fmt: 'INT4', size: 35, pct: 12.5 },
+                    ].map((d, i) => (
+                      <div key={i} className="text-center">
+                        <div 
+                          className={`w-16 mx-auto rounded-t-lg ${i === 3 ? 'bg-teal-500' : 'bg-slate-600'}`}
+                          style={{ height: `${d.pct}%` }}
+                        />
+                        <div className="text-white/80 text-xs font-bold mt-1">{d.fmt}</div>
+                        <div className="text-slate-500 text-xs">{d.size}GB</div>
+                      </div>
+                    ))}
+                  </div>
                 </div>
-              </div>
+              </Hoverable>
             </section>
 
             {/* SECTION 3: PTQ vs QAT */}
