--- a/movement4_inference/inference-lifecycle-diagram.html
+++ b/movement4_inference/inference-lifecycle-diagram.html
@@ -31,6 +31,12 @@
       const [mousePos, setMousePos] = useState({ x: 0, y: 0 });
 
       const handleMouseMove = (e) => {
+        const target = e.target.closest('[data-tooltip-id]');
+        if (target) {
+          setTooltip(target.getAttribute('data-tooltip-id'));
+        } else {
+          setTooltip(null);
+        }
         setMousePos({ x: e.clientX, y: e.clientY });
       };
 
@@ -262,8 +268,8 @@
       const Hoverable = ({ id, children, className = '' }) => (
         <div
           className={`cursor-help ${className}`}
-          onMouseEnter={() => setTooltip(id)}
-          onMouseLeave={() => setTooltip(null)}
+          data-tooltip-id={id}
+          
         >
           {children}
         </div>
