--- a/movement5_serving/KV_CACHE_batching_pagedattention.html
+++ b/movement5_serving/KV_CACHE_batching_pagedattention.html
@@ -35,8 +35,8 @@
 
       const Box = ({ id, color, children }) => (
         <div
-          onMouseEnter={() => setTip(id)}
-          onMouseLeave={() => setTip(null)}
+          data-tooltip-id={id}
+          
           className={`p-4 rounded-xl border-2 cursor-pointer transition-all hover:scale-105 ${color}`}
         >
           {children}
@@ -44,7 +44,7 @@
       );
 
       return (
-        <div className="min-h-screen bg-black text-white p-8" onMouseMove={e => setPos({ x: e.clientX, y: e.clientY })}>
+        <div className="min-h-screen bg-black text-white p-8" onMouseMove={e => { const target = e.target.closest('[data-tooltip-id]'); if (target) { setTip(target.getAttribute('data-tooltip-id')); } else { setTip(null); } setPos({ x: e.clientX, y: e.clientY }); }}>
           {tip && data[tip] && (
             <div 
               className="fixed z-50 w-80 p-4 bg-slate-900 border-2 border-cyan-500 rounded-xl shadow-xl"
