--- a/movement6_agents/llm-router-agent-pipeline.html
+++ b/movement6_agents/llm-router-agent-pipeline.html
@@ -510,17 +510,17 @@
             <div className="bg-gradient-to-r from-amber-900 to-orange-900 border-2 border-amber-400 rounded-xl p-4 mb-6">
               <div className="text-amber-300 font-black text-lg mb-3 text-center">📊 PIPELINE SUMMARY</div>
               <div className="flex items-center justify-center gap-2 flex-wrap text-sm">
-                <div className="bg-blue-600 rounded px-3 py-2 text-white">👤 Request</div>
+                <H id="pipeline-1"><div className="bg-blue-600 rounded px-3 py-2 text-white cursor-help">👤 Request</div></H>
                 <div className="text-amber-400">→</div>
-                <div className="bg-amber-600 rounded px-3 py-2 text-white">🧠 Router LLM<br/><span className="text-xs">(Inference #1)</span></div>
+                <H id="pipeline-2"><div className="bg-amber-600 rounded px-3 py-2 text-white cursor-help">🧠 Router LLM<br/><span className="text-xs">(Inference #1)</span></div></H>
                 <div className="text-amber-400">→</div>
-                <div className="bg-green-600 rounded px-3 py-2 text-white">📊 Agent 1<br/><span className="text-xs">(Inference #2-4)</span></div>
+                <H id="pipeline-3"><div className="bg-green-600 rounded px-3 py-2 text-white cursor-help">📊 Agent 1<br/><span className="text-xs">(Inference #2-4)</span></div></H>
                 <div className="text-amber-400">→</div>
                 <div className="bg-pink-600 rounded px-3 py-2 text-white">✍️ Agent 2<br/><span className="text-xs">(Inference #5-7)</span></div>
                 <div className="text-amber-400">→</div>
-                <div className="bg-violet-600 rounded px-3 py-2 text-white">🧩 Aggregate<br/><span className="text-xs">(Inference #8)</span></div>
+                <H id="pipeline-4"><div className="bg-violet-600 rounded px-3 py-2 text-white cursor-help">🧩 Aggregate<br/><span className="text-xs">(Inference #8)</span></div></H>
                 <div className="text-amber-400">→</div>
-                <div className="bg-green-600 rounded px-3 py-2 text-white">✅ Response</div>
+                <H id="pipeline-5"><div className="bg-green-600 rounded px-3 py-2 text-white cursor-help">✅ Response</div></H>
               </div>
               <div className="text-center mt-3 text-amber-200 text-sm">
                 Each box with "Inference" runs full Stages 0-13. <span className="text-amber-400 font-bold">Total: 8 complete LLM pipelines for 1 request!</span>
