--- a/movement7_rag/RAG_retrieval_augmented_generation.html
+++ b/movement7_rag/RAG_retrieval_augmented_generation.html
@@ -27,6 +27,12 @@
       const [mousePos, setMousePos] = useState({ x: 0, y: 0 });
 
       const handleMouseMove = (e) => {
+        const target = e.target.closest('[data-tooltip-id]');
+        if (target) {
+          setTooltip(target.getAttribute('data-tooltip-id'));
+        } else {
+          setTooltip(null);
+        }
         setMousePos({ x: e.clientX, y: e.clientY });
       };
 
@@ -447,8 +453,8 @@
 
       const Hoverable = ({ id, children, className = '' }) => (
         <div 
-          onMouseEnter={() => showTooltip(id)}
-          onMouseLeave={hideTooltip}
+          data-tooltip-id={id}
+          
           className={`cursor-pointer transition-all hover:scale-[1.02] hover:brightness-110 ${className}`}
         >
           {children}
@@ -753,12 +759,14 @@
 
             {/* RETRIEVAL */}
             <section className="mb-10">
-              <SectionHeader 
-                number="6" 
-                title="Retrieval" 
-                subtitle="Find relevant chunks for a query"
-                color="from-blue-500 to-indigo-600"
-              />
+              <Hoverable id="retrieve-concept">
+                <SectionHeader 
+                  number="6" 
+                  title="Retrieval" 
+                  subtitle="Find relevant chunks for a query"
+                  color="from-blue-500 to-indigo-600"
+                />
+              </Hoverable>
               <div className="grid grid-cols-3 gap-4 mb-4">
                 <Hoverable id="retrieve-similarity">
                   <div className="p-4 rounded-xl bg-blue-900/50 border-2 border-blue-400">
