--- a/movement5_serving/KV_CACHE_batching_pagedattention.html
+++ b/movement5_serving/KV_CACHE_batching_pagedattention.html
@@ -48,7 +48,7 @@
           {tip && data[tip] && (
             <div 
               className="fixed z-50 w-80 p-4 bg-slate-900 border-2 border-cyan-500 rounded-xl shadow-xl"
-              style={{ left: pos.x + 15, top: pos.y + 15 }}
+              style={{ right: 20, bottom: 20 }}
             >
               <div className="text-cyan-300 font-bold mb-2">{data[tip].title}</div>
               <div className="text-slate-300 text-sm">{data[tip].desc}</div>
