--- a/movement1_foundation/MOE_mixture_of_experts.html
+++ b/movement1_foundation/MOE_mixture_of_experts.html
@@ -224,15 +224,11 @@
         if (!tooltip || !tooltips[tooltip]) return null;
         const t = tooltips[tooltip];
         
-        let left = mousePos.x + 15;
-        let top = mousePos.y + 15;
-        if (left + 420 > window.innerWidth) left = mousePos.x - 420;
-        if (top + 350 > window.innerHeight) top = window.innerHeight - 360;
         
         return (
           <div 
             className="fixed z-50 w-[400px] p-5 bg-slate-900 border-2 border-white/20 rounded-xl shadow-2xl"
-            style={{ left, top }}
+            style={{ right: 20, bottom: 20 }}
           >
             <div className="text-lg font-black text-white mb-2">{t.title}</div>
             <p className="text-slate-300 text-sm leading-relaxed mb-3">{t.content}</p>
