--- a/movement4_inference/STAGES 10-13-streaming-post-processing.html
+++ b/movement4_inference/STAGES 10-13-streaming-post-processing.html
@@ -96,14 +96,12 @@
       const Tooltip = () => {
         if (!tooltip || !tooltips[tooltip]) return null;
         const t = tooltips[tooltip];
-        let left = mousePos.x + 15, top = mousePos.y + 15;
-        if (left + 400 > window.innerWidth) left = mousePos.x - 400;
-        if (top + 300 > window.innerHeight) top = window.innerHeight - 310;
+        
         return (
-          <div className="fixed z-50 w-[380px] p-4 bg-slate-900 border-2 border-white/20 rounded-xl shadow-2xl" style={{ left, top }}>
+          <div className="fixed z-50 w-[380px] p-4 bg-slate-900 border-2 border-white/20 rounded-xl shadow-2xl" style={{ right: 20, bottom: 20 }}>
             <div className="text-lg font-black text-white mb-2">{t.title}</div>
             <p className="text-slate-300 text-sm leading-relaxed mb-2">{t.content}</p>
-            {t.details && <div className="bg-black/50 rounded-lg p-2 mb-2"><div className="text-xs text-slate-500 font-bold mb-1">DETAILS</div><p className="text-xs text-cyan-300 whitespace-pre-wrap">{t.details}</p></div>}
+            {t.details && <div className="bg-black/50 rounded-lg p-2 mb-2"><div className="text-xs text-slate-500 font-bold mb-1">DETAILS</div><pre className="text-xs text-cyan-300 font-mono whitespace-pre-wrap">{t.details}</pre></div>}
             {t.example && <div className="bg-black/50 rounded-lg p-2"><div className="text-xs text-slate-500 font-bold mb-1">EXAMPLE</div><pre className="text-xs text-green-300 font-mono whitespace-pre-wrap">{t.example}</pre></div>}
           </div>
         );
