--- a/movement2_pre_training/STAGE_6_training_optimizer_step.html
+++ b/movement2_pre_training/STAGE_6_training_optimizer_step.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- © 2026 Subramaniyam Pooni | CS²B Technologies (CSSQUAREDB Technologies) | All Rights Reserved -->
   <meta charset="UTF-8">
+  <meta name="author" content="Subramaniyam Pooni">
+  <meta name="company" content="CS²B Technologies (CSSQUAREDB Technologies)">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Stage 6: Optimizer Step - Training Lifecycle</title>
   <script src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
@@ -745,5 +748,7 @@
     const root = ReactDOM.createRoot(document.getElementById('root'));
     root.render(<OptimizerStepStage />);
   </script>
+  <div id="cs2b-copyright-footer" style="position:fixed;bottom:0;left:0;right:0;background:linear-gradient(to right,#0f172a,#1e1b4b);border-top:1px solid #334155;padding:8px 16px;font-family:monospace;font-size:11px;color:#64748b;display:flex;justify-content:space-between;align-items:center;z-index:9999;"><span>© 2026 Subramaniyam Pooni</span><span style="color:#8b5cf6;">CS²B Technologies</span><span style="color:#475569;">Enterprise AI Agent Development &amp; LLMOps</span></div>
+<div id="cs2b-watermark" style="position:fixed;top:50%;left:50%;transform:translate(-50%,-50%) rotate(-35deg);pointer-events:none;z-index:9998;white-space:nowrap;user-select:none;text-align:center;"><div style="font-size:100px;font-weight:900;font-family:Arial,sans-serif;color:rgba(139,92,246,0.06);">CS²B Technologies</div><div style="font-size:40px;font-weight:700;font-family:Arial,sans-serif;color:rgba(139,92,246,0.05);">© Subramaniyam Pooni</div></div>
 </body>
 </html>
